--- a/public/index.html
+++ b/public/index.html
@@ -168,11 +168,32 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>JackHabbit Journal</title>
+    <title>Journal</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!-- SW update notification -->
+    <button
+      id="swn"
+      style="
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        background-color: green;
+        right: 0;
+        color: white;
+        width: 100%;
+        height: auto;
+        font-family: monospace;
+        padding: 7px;
+        z-index: 1400;
+      "
+      hidden
+    >
+      A new update is available and will install when the app is closed. You can
+      click this notification to update right away.
+    </button>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -184,4 +205,62 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script>
+    function invokeServiceWorkerUpdateFlow(registration) {
+      // TODO implement your own UI notification element
+      let notification = document.querySelector("#swn");
+      notification.hidden = false;
+      notification.addEventListener("click", () => {
+        if (registration.waiting) {
+          // let waiting Service Worker know it should became active
+          registration.waiting.postMessage("SKIP_WAITING");
+        }
+      });
+    }
+
+    // check if the browser supports serviceWorker at all
+    if ("serviceWorker" in navigator) {
+      // wait for the page to load
+      window.addEventListener("load", async () => {
+        // register the service worker from the file specified
+        const registration = await navigator.serviceWorker.register(
+          "/service-worker.js"
+        );
+
+        // ensure the case when the updatefound event was missed is also handled
+        // by re-invoking the prompt when there's a waiting Service Worker
+        if (registration.waiting) {
+          invokeServiceWorkerUpdateFlow(registration);
+        }
+
+        // detect Service Worker update available and wait for it to become installed
+        registration.addEventListener("updatefound", () => {
+          if (registration.installing) {
+            // wait until the new Service worker is actually installed (ready to take over)
+            registration.installing.addEventListener("statechange", () => {
+              if (registration.waiting) {
+                // if there's an existing controller (previous Service Worker), show the prompt
+                if (navigator.serviceWorker.controller) {
+                  invokeServiceWorkerUpdateFlow(registration);
+                } else {
+                  // otherwise it's the first install, nothing to do
+                  console.log("Service Worker initialized for the first time");
+                }
+              }
+            });
+          }
+        });
+
+        let refreshing = false;
+
+        // detect controller change and refresh the page
+        navigator.serviceWorker.addEventListener("controllerchange", () => {
+          if (!refreshing) {
+            window.location.reload();
+            refreshing = true;
+          }
+        });
+      });
+    }
+  </script>
 </html>
